--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/charts": "^2.6.2",
     "@neo4j-nvl/react": "^0.3.9",
     "@tanstack/react-query": "^5.75.7",
+    "@xyflow/react": "^12.8.4",
     "antd": "^5.27.1",
     "axios": "^1.11.0",
     "react": "^19.1.1",
@@ -24,6 +25,7 @@
     "@kubb/cli": "^3.10.10",
     "@kubb/plugin-client": "^3.10.10",
     "@kubb/plugin-react-query": "^3.10.10",
+    "@types/dagre": "^0.7.53",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
