--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
   "dependencies": {
     "@ant-design/charts": "^2.6.2",
     "@neo4j-nvl/react": "^0.3.9",
+    "@react-three/fiber": "^9.3.0",
     "@tanstack/react-query": "^5.75.7",
+    "@types/three": "^0.180.0",
+    "@visx/network": "^3.12.0",
     "@xyflow/react": "^12.8.4",
     "antd": "^5.27.1",
     "axios": "^1.11.0",
+    "d3-force": "^3.0.0",
+    "elkjs": "^0.10.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "reagraph": "^4.30.3",
+    "three": "^0.180.0",
+    "web-worker": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
