--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "antd": "^5.27.1",
     "axios": "^1.11.0",
     "elkjs": "^0.10.0",
+    "immer": "^10.1.3",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "web-worker": "^1.5.0"
