--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mitt": "^3.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "web-worker": "^1.5.0"
+    "web-worker": "^1.5.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
